start frontpage news section, added a hackernews app

--- a/app/explore2/assets/i18n/conzept-ar.json
+++ b/app/explore2/assets/i18n/conzept-ar.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "فايروس",
   "app-guide-featured-article": "مقال متميز",
   "app-menu-cover-topic": "موضوع الغلاف",
+  "app-menu-news": "news",
   "app-menu-culture": "الثقافة",
   "app-menu-nature": "طبيعة سجية",
   "app-menu-license": "رخصة",
