--- a/app/explore2/assets/i18n/conzept-bn.json
+++ b/app/explore2/assets/i18n/conzept-bn.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "ভাইরাস",
   "app-guide-featured-article": "বৈশিষ্ট্যযুক্ত নিবন্ধ",
   "app-menu-cover-topic": "কভার বিষয়",
+  "app-menu-news": "news",
   "app-menu-culture": "সংস্কৃতি",
   "app-menu-nature": "প্রকৃতি",
   "app-menu-license": "লাইসেন্স",
