--- a/app/explore2/assets/i18n/conzept-ca.json
+++ b/app/explore2/assets/i18n/conzept-ca.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "virus",
   "app-guide-featured-article": "article destacat",
   "app-menu-cover-topic": "tema de portada",
+  "app-menu-news": "news",
   "app-menu-culture": "cultura",
   "app-menu-nature": "naturalesa",
   "app-menu-license": "llicència",
