--- a/app/explore2/assets/i18n/conzept-ceb.json
+++ b/app/explore2/assets/i18n/conzept-ceb.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "mga bayrus",
   "app-guide-featured-article": "featured nga artikulo",
   "app-menu-cover-topic": "tabon nga topiko",
+  "app-menu-news": "news",
   "app-menu-culture": "kultura",
   "app-menu-nature": "kinaiyahan",
   "app-menu-license": "lisensya",
