--- a/app/explore2/assets/i18n/conzept-cs.json
+++ b/app/explore2/assets/i18n/conzept-cs.json
@@ -154,6 +154,7 @@
   "app-guide-virus": "virus",
   "app-guide-featured-article": "doporučený článek",
   "app-menu-cover-topic": "krycí téma",
+  "app-menu-news": "news",
   "app-menu-culture": "kultura",
   "app-menu-nature": "Příroda",
   "app-menu-license": "licence",
