--- a/app/explore2/assets/i18n/conzept-da.json
+++ b/app/explore2/assets/i18n/conzept-da.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "virus",
   "app-guide-featured-article": "fremhævet artikel",
   "app-menu-cover-topic": "dække emne",
+  "app-menu-news": "news",
   "app-menu-culture": "kultur",
   "app-menu-nature": "natur",
   "app-menu-license": "licens",
