--- a/app/explore2/assets/i18n/conzept-de.json
+++ b/app/explore2/assets/i18n/conzept-de.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "Virus",
   "app-guide-featured-article": "gesponserter Artikel",
   "app-menu-cover-topic": "Titelthema",
+  "app-menu-news": "news",
   "app-menu-culture": "Kultur",
   "app-menu-nature": "Natur",
   "app-menu-license": "Lizenz",
