--- a/app/explore2/assets/i18n/conzept-es.json
+++ b/app/explore2/assets/i18n/conzept-es.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "virus",
   "app-guide-featured-article": "artículo destacado",
   "app-menu-cover-topic": "tema de portada",
+  "app-menu-news": "news",
   "app-menu-culture": "cultura",
   "app-menu-nature": "naturaleza",
   "app-menu-license": "licencia",
