--- a/app/explore2/assets/i18n/conzept-fa.json
+++ b/app/explore2/assets/i18n/conzept-fa.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "ویروس",
   "app-guide-featured-article": "مقاله برجسته",
   "app-menu-cover-topic": "پوشش موضوع",
+  "app-menu-news": "news",
   "app-menu-culture": "فرهنگ",
   "app-menu-nature": "طبیعت",
   "app-menu-license": "مجوز",
