--- a/app/explore2/assets/i18n/conzept-fi.json
+++ b/app/explore2/assets/i18n/conzept-fi.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "virus",
   "app-guide-featured-article": "esillä oleva artikkeli",
   "app-menu-cover-topic": "kansi aihe",
+  "app-menu-news": "news",
   "app-menu-culture": "kulttuuri",
   "app-menu-nature": "luonto",
   "app-menu-license": "lisenssi",
