--- a/app/explore2/assets/i18n/conzept-fr.json
+++ b/app/explore2/assets/i18n/conzept-fr.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "virus",
   "app-guide-featured-article": "article vedette",
   "app-menu-cover-topic": "sujet de couverture",
+  "app-menu-news": "news",
   "app-menu-culture": "Culture",
   "app-menu-nature": "Nature",
   "app-menu-license": "Licence",
