--- a/app/explore2/assets/i18n/conzept-ha.json
+++ b/app/explore2/assets/i18n/conzept-ha.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "ƙwayar cuta",
   "app-guide-featured-article": "labarin da aka gabatar",
   "app-menu-cover-topic": "batun rufewa",
+  "app-menu-news": "news",
   "app-menu-culture": "al'ada",
   "app-menu-nature": "yanayi",
   "app-menu-license": "lasisi",
