--- a/app/explore2/assets/i18n/conzept-hi.json
+++ b/app/explore2/assets/i18n/conzept-hi.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "वाइरस",
   "app-guide-featured-article": "प्रमुख लेख",
   "app-menu-cover-topic": "कवर विषय",
+  "app-menu-news": "news",
   "app-menu-culture": "संस्कृति",
   "app-menu-nature": "प्रकृति",
   "app-menu-license": "लाइसेंस",
