--- a/app/explore2/assets/i18n/conzept-hr.json
+++ b/app/explore2/assets/i18n/conzept-hr.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "virus",
   "app-guide-featured-article": "istaknuti članak",
   "app-menu-cover-topic": "naslovna tema",
+  "app-menu-news": "news",
   "app-menu-culture": "kultura",
   "app-menu-nature": "priroda",
   "app-menu-license": "licencija",
