--- a/app/explore2/assets/i18n/conzept-id.json
+++ b/app/explore2/assets/i18n/conzept-id.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "virus",
   "app-guide-featured-article": "artikel unggulan",
   "app-menu-cover-topic": "topik penutup",
+  "app-menu-news": "news",
   "app-menu-culture": "budaya",
   "app-menu-nature": "alam",
   "app-menu-license": "lisensi",
