--- a/app/explore2/assets/i18n/conzept-it.json
+++ b/app/explore2/assets/i18n/conzept-it.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "virus",
   "app-guide-featured-article": "articolo in primo piano",
   "app-menu-cover-topic": "argomento di copertina",
+  "app-menu-news": "news",
   "app-menu-culture": "cultura",
   "app-menu-nature": "natura",
   "app-menu-license": "licenza",
