--- a/app/explore2/assets/i18n/conzept-ja.json
+++ b/app/explore2/assets/i18n/conzept-ja.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "ウイルス",
   "app-guide-featured-article": "おすすめの記事",
   "app-menu-cover-topic": "カバートピック",
+  "app-menu-news": "news",
   "app-menu-culture": "文化",
   "app-menu-nature": "自然",
   "app-menu-license": "ライセンス",
