--- a/app/explore2/assets/i18n/conzept-ko.json
+++ b/app/explore2/assets/i18n/conzept-ko.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "바이러스",
   "app-guide-featured-article": "특집 기사",
   "app-menu-cover-topic": "표지 주제",
+  "app-menu-news": "news",
   "app-menu-culture": "문화",
   "app-menu-nature": "자연",
   "app-menu-license": "특허",
