--- a/app/explore2/assets/i18n/conzept-mr.json
+++ b/app/explore2/assets/i18n/conzept-mr.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "विषाणू",
   "app-guide-featured-article": "वैशिष्ट्यीकृत लेख",
   "app-menu-cover-topic": "कव्हर विषय",
+  "app-menu-news": "news",
   "app-menu-culture": "संस्कृती",
   "app-menu-nature": "निसर्ग",
   "app-menu-license": "परवाना",
