--- a/app/explore2/assets/i18n/conzept-nl.json
+++ b/app/explore2/assets/i18n/conzept-nl.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "virus",
   "app-guide-featured-article": "aanbevolen artikel",
   "app-menu-cover-topic": "omslagonderwerp",
+  "app-menu-news": "news",
   "app-menu-culture": "cultuur",
   "app-menu-nature": "natuur",
   "app-menu-license": "licentie",
