--- a/app/explore2/assets/i18n/conzept-no.json
+++ b/app/explore2/assets/i18n/conzept-no.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "virus",
   "app-guide-featured-article": "omtalt artikkel",
   "app-menu-cover-topic": "dekke emnet",
+  "app-menu-news": "news",
   "app-menu-culture": "kultur",
   "app-menu-nature": "natur",
   "app-menu-license": "tillatelse",
