--- a/app/explore2/assets/i18n/conzept-pt.json
+++ b/app/explore2/assets/i18n/conzept-pt.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "vírus",
   "app-guide-featured-article": "Artigo de destaque",
   "app-menu-cover-topic": "tema da capa",
+  "app-menu-news": "news",
   "app-menu-culture": "cultura",
   "app-menu-nature": "natureza",
   "app-menu-license": "licença",
