--- a/app/explore2/assets/i18n/conzept-ru.json
+++ b/app/explore2/assets/i18n/conzept-ru.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "вирус",
   "app-guide-featured-article": "избранная статья",
   "app-menu-cover-topic": "тема обложки",
+  "app-menu-news": "news",
   "app-menu-culture": "культура",
   "app-menu-nature": "природа",
   "app-menu-license": "лицензия",
