--- a/app/explore2/assets/i18n/conzept-sr.json
+++ b/app/explore2/assets/i18n/conzept-sr.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "вирус",
   "app-guide-featured-article": "истакнут чланак",
   "app-menu-cover-topic": "насловна тема",
+  "app-menu-news": "news",
   "app-menu-culture": "културе",
   "app-menu-nature": "природа",
   "app-menu-license": "лиценце",
