--- a/app/explore2/assets/i18n/conzept-sw.json
+++ b/app/explore2/assets/i18n/conzept-sw.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "virusi",
   "app-guide-featured-article": "makala iliyoangaziwa",
   "app-menu-cover-topic": "mada ya kufunika",
+  "app-menu-news": "news",
   "app-menu-culture": "utamaduni",
   "app-menu-nature": "asili",
   "app-menu-license": "leseni",
