--- a/app/explore2/assets/i18n/conzept-ta.json
+++ b/app/explore2/assets/i18n/conzept-ta.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "வைரஸ்",
   "app-guide-featured-article": "சிறப்புக் கட்டுரை",
   "app-menu-cover-topic": "கவர் தலைப்பு",
+  "app-menu-news": "news",
   "app-menu-culture": "கலாச்சாரம்",
   "app-menu-nature": "இயற்கை",
   "app-menu-license": "உரிமம்",
