--- a/app/explore2/assets/i18n/conzept-te.json
+++ b/app/explore2/assets/i18n/conzept-te.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "వైరస్",
   "app-guide-featured-article": "ఫీచర్ చేసిన వ్యాసం",
   "app-menu-cover-topic": "కవర్ టాపిక్",
+  "app-menu-news": "news",
   "app-menu-culture": "సంస్కృతి",
   "app-menu-nature": "ప్రకృతి",
   "app-menu-license": "లైసెన్స్",
