--- a/app/explore2/assets/i18n/conzept-tr.json
+++ b/app/explore2/assets/i18n/conzept-tr.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "virüs",
   "app-guide-featured-article": "öne çıkan makale",
   "app-menu-cover-topic": "kapak konusu",
+  "app-menu-news": "news",
   "app-menu-culture": "kültür",
   "app-menu-nature": "doğa",
   "app-menu-license": "lisans",
