--- a/app/explore2/assets/i18n/conzept-uk.json
+++ b/app/explore2/assets/i18n/conzept-uk.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "вірус",
   "app-guide-featured-article": "вибрана стаття",
   "app-menu-cover-topic": "тема покриття",
+  "app-menu-news": "news",
   "app-menu-culture": "культури",
   "app-menu-nature": "природи",
   "app-menu-license": "ліцензія",
