--- a/app/explore2/assets/i18n/conzept-ur.json
+++ b/app/explore2/assets/i18n/conzept-ur.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "وائرس",
   "app-guide-featured-article": "نمایاں مضمون",
   "app-menu-cover-topic": "کور موضوع",
+  "app-menu-news": "news",
   "app-menu-culture": "ثقافت",
   "app-menu-nature": "فطرت",
   "app-menu-license": "لائسنس",
