--- a/app/explore2/assets/i18n/conzept-vi.json
+++ b/app/explore2/assets/i18n/conzept-vi.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "vi-rút",
   "app-guide-featured-article": "bài báo nổi bật",
   "app-menu-cover-topic": "chủ đề trang bìa",
+  "app-menu-news": "news",
   "app-menu-culture": "văn hóa",
   "app-menu-nature": "thiên nhiên",
   "app-menu-license": "giấy phép",
