--- a/app/explore2/assets/i18n/conzept-zh.json
+++ b/app/explore2/assets/i18n/conzept-zh.json
@@ -153,6 +153,7 @@
   "app-guide-virus": "病毒",
   "app-guide-featured-article": "特色文章",
   "app-menu-cover-topic": "封面主题",
+  "app-menu-news": "news",
   "app-menu-culture": "文化",
   "app-menu-nature": "自然",
   "app-menu-license": "执照",
