--- a/app/explore2/assets/i18n/conzept-ar.json
+++ b/app/explore2/assets/i18n/conzept-ar.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "شخصية",
   "app-guide-featured-portal": "بوابة مميزة",
   "app-guide-musical-instrument": "أداة",
+  "app-guide-technology": "technology",
   "app-guide-radio": "مذياع",
   "app-menu-country-select": "بلد",
   "app-menu-interests": "الإهتمامات",
