--- a/app/explore2/assets/i18n/conzept-bn.json
+++ b/app/explore2/assets/i18n/conzept-bn.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "ব্যক্তিত্ব",
   "app-guide-featured-portal": "বৈশিষ্ট্যযুক্ত পোর্টাল",
   "app-guide-musical-instrument": "যন্ত্র",
+  "app-guide-technology": "technology",
   "app-guide-radio": "রেডিও",
   "app-menu-country-select": "দেশ",
   "app-menu-interests": "স্বার্থ",
