--- a/app/explore2/assets/i18n/conzept-ca.json
+++ b/app/explore2/assets/i18n/conzept-ca.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "persona",
   "app-guide-featured-portal": "portal destacat",
   "app-guide-musical-instrument": "instrument",
+  "app-guide-technology": "technology",
   "app-guide-radio": "ràdio",
   "app-menu-country-select": "país",
   "app-menu-interests": "interessos",
