--- a/app/explore2/assets/i18n/conzept-ceb.json
+++ b/app/explore2/assets/i18n/conzept-ceb.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "persona",
   "app-guide-featured-portal": "gipakita nga portal",
   "app-guide-musical-instrument": "instrumento",
+  "app-guide-technology": "technology",
   "app-guide-radio": "radyo",
   "app-menu-country-select": "nasud",
   "app-menu-interests": "interes",
