--- a/app/explore2/assets/i18n/conzept-cs.json
+++ b/app/explore2/assets/i18n/conzept-cs.json
@@ -194,6 +194,7 @@
   "app-menu-persona": "persona",
   "app-guide-featured-portal": "doporučený portál",
   "app-guide-musical-instrument": "nástroj",
+  "app-guide-technology": "technology",
   "app-guide-radio": "rádio",
   "app-menu-country-select": "země",
   "app-menu-interests": "zájmy",
