--- a/app/explore2/assets/i18n/conzept-de.json
+++ b/app/explore2/assets/i18n/conzept-de.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "Persona",
   "app-guide-featured-portal": "gekennzeichnetes Portal",
   "app-guide-musical-instrument": "Instrument",
+  "app-guide-technology": "technology",
   "app-guide-radio": "Radio",
   "app-menu-country-select": "Land",
   "app-menu-interests": "Interessen",
