--- a/app/explore2/assets/i18n/conzept-en.json
+++ b/app/explore2/assets/i18n/conzept-en.json
@@ -218,6 +218,7 @@
   "app-guide-featured-portal": "featured portal",
 
   "app-guide-musical-instrument": "instrument",
+  "app-guide-technology": "technology",
   "app-guide-radio": "radio",
 
   "app-menu-country-select": "country",
