--- a/app/explore2/assets/i18n/conzept-es.json
+++ b/app/explore2/assets/i18n/conzept-es.json
@@ -153,7 +153,7 @@
   "app-guide-virus": "virus",
   "app-guide-featured-article": "artículo destacado",
   "app-menu-cover-topic": "tema de portada",
-  "app-menu-news": "news",
+  "app-menu-news": "noticias",
   "app-menu-culture": "cultura",
   "app-menu-nature": "naturaleza",
   "app-menu-license": "licencia",
@@ -193,6 +193,7 @@
   "app-menu-persona": "persona",
   "app-guide-featured-portal": "portal destacado",
   "app-guide-musical-instrument": "instrumento",
+  "app-guide-technology": "tecnología",
   "app-guide-radio": "radio",
   "app-menu-country-select": "país",
   "app-menu-interests": "intereses",
