--- a/app/explore2/assets/i18n/conzept-fa.json
+++ b/app/explore2/assets/i18n/conzept-fa.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "شخصیت",
   "app-guide-featured-portal": "پورتال برجسته",
   "app-guide-musical-instrument": "ابزار",
+  "app-guide-technology": "technology",
   "app-guide-radio": "رادیو",
   "app-menu-country-select": "کشور",
   "app-menu-interests": "منافع",
