--- a/app/explore2/assets/i18n/conzept-fi.json
+++ b/app/explore2/assets/i18n/conzept-fi.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "persoona",
   "app-guide-featured-portal": "esitelty portaali",
   "app-guide-musical-instrument": "väline",
+  "app-guide-technology": "technology",
   "app-guide-radio": "radio",
   "app-menu-country-select": "maa",
   "app-menu-interests": "kiinnostuksen kohteet",
