--- a/app/explore2/assets/i18n/conzept-fr.json
+++ b/app/explore2/assets/i18n/conzept-fr.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "personnage",
   "app-guide-featured-portal": "portail en vedette",
   "app-guide-musical-instrument": "instrument",
+  "app-guide-technology": "technology",
   "app-guide-radio": "radio",
   "app-menu-country-select": "pays",
   "app-menu-interests": "intérêts",
