--- a/app/explore2/assets/i18n/conzept-ha.json
+++ b/app/explore2/assets/i18n/conzept-ha.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "mutum",
   "app-guide-featured-portal": "portal mai fasali",
   "app-guide-musical-instrument": "kayan aiki",
+  "app-guide-technology": "technology",
   "app-guide-radio": "rediyo",
   "app-menu-country-select": "kasa",
   "app-menu-interests": "sha'awa",
