--- a/app/explore2/assets/i18n/conzept-hi.json
+++ b/app/explore2/assets/i18n/conzept-hi.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "व्यक्तित्व",
   "app-guide-featured-portal": "विशेष रुप से प्रदर्शित पोर्टल",
   "app-guide-musical-instrument": "वाद्य यंत्र",
+  "app-guide-technology": "technology",
   "app-guide-radio": "रेडियो",
   "app-menu-country-select": "देश",
   "app-menu-interests": "रूचियाँ",
