--- a/app/explore2/assets/i18n/conzept-id.json
+++ b/app/explore2/assets/i18n/conzept-id.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "kepribadian",
   "app-guide-featured-portal": "portal unggulan",
   "app-guide-musical-instrument": "instrumen",
+  "app-guide-technology": "technology",
   "app-guide-radio": "radio",
   "app-menu-country-select": "negara",
   "app-menu-interests": "minat",
