--- a/app/explore2/assets/i18n/conzept-it.json
+++ b/app/explore2/assets/i18n/conzept-it.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "persona",
   "app-guide-featured-portal": "portale in primo piano",
   "app-guide-musical-instrument": "strumento",
+  "app-guide-technology": "technology",
   "app-guide-radio": "Radio",
   "app-menu-country-select": "nazione",
   "app-menu-interests": "interessi",
