--- a/app/explore2/assets/i18n/conzept-ja.json
+++ b/app/explore2/assets/i18n/conzept-ja.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "ペルソナ",
   "app-guide-featured-portal": "注目のポータル",
   "app-guide-musical-instrument": "楽器",
+  "app-guide-technology": "technology",
   "app-guide-radio": "無線",
   "app-menu-country-select": "国",
   "app-menu-interests": "興味",
