--- a/app/explore2/assets/i18n/conzept-ko.json
+++ b/app/explore2/assets/i18n/conzept-ko.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "페르소나",
   "app-guide-featured-portal": "추천 포털",
   "app-guide-musical-instrument": "기구",
+  "app-guide-technology": "technology",
   "app-guide-radio": "라디오",
   "app-menu-country-select": "국가",
   "app-menu-interests": "이해",
