--- a/app/explore2/assets/i18n/conzept-mr.json
+++ b/app/explore2/assets/i18n/conzept-mr.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "व्यक्तिमत्व",
   "app-guide-featured-portal": "वैशिष्ट्यीकृत पोर्टल",
   "app-guide-musical-instrument": "साधन",
+  "app-guide-technology": "technology",
   "app-guide-radio": "रेडिओ",
   "app-menu-country-select": "देश",
   "app-menu-interests": "स्वारस्ये",
