--- a/app/explore2/assets/i18n/conzept-no.json
+++ b/app/explore2/assets/i18n/conzept-no.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "persona",
   "app-guide-featured-portal": "omtalt portal",
   "app-guide-musical-instrument": "instrument",
+  "app-guide-technology": "technology",
   "app-guide-radio": "radio",
   "app-menu-country-select": "land",
   "app-menu-interests": "interesser",
