--- a/app/explore2/assets/i18n/conzept-sw.json
+++ b/app/explore2/assets/i18n/conzept-sw.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "mtu",
   "app-guide-featured-portal": "lango lililoangaziwa",
   "app-guide-musical-instrument": "chombo",
+  "app-guide-technology": "technology",
   "app-guide-radio": "redio",
   "app-menu-country-select": "nchi",
   "app-menu-interests": "maslahi",
