--- a/app/explore2/assets/i18n/conzept-ta.json
+++ b/app/explore2/assets/i18n/conzept-ta.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "ஆளுமை",
   "app-guide-featured-portal": "சிறப்பு போர்டல்",
   "app-guide-musical-instrument": "கருவி",
+  "app-guide-technology": "technology",
   "app-guide-radio": "வானொலி",
   "app-menu-country-select": "நாடு",
   "app-menu-interests": "நலன்கள்",
