--- a/app/explore2/assets/i18n/conzept-te.json
+++ b/app/explore2/assets/i18n/conzept-te.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "వ్యక్తిత్వం",
   "app-guide-featured-portal": "ఫీచర్ చేసిన పోర్టల్",
   "app-guide-musical-instrument": "వాయిద్యం",
+  "app-guide-technology": "technology",
   "app-guide-radio": "రేడియో",
   "app-menu-country-select": "దేశం",
   "app-menu-interests": "అభిరుచులు",
