--- a/app/explore2/assets/i18n/conzept-tr.json
+++ b/app/explore2/assets/i18n/conzept-tr.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "kişilik",
   "app-guide-featured-portal": "öne çıkan portal",
   "app-guide-musical-instrument": "enstrüman",
+  "app-guide-technology": "technology",
   "app-guide-radio": "radyo",
   "app-menu-country-select": "ülke",
   "app-menu-interests": "ilgi alanları",
