--- a/app/explore2/assets/i18n/conzept-uk.json
+++ b/app/explore2/assets/i18n/conzept-uk.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "персона",
   "app-guide-featured-portal": "рекомендований портал",
   "app-guide-musical-instrument": "інструмент",
+  "app-guide-technology": "technology",
   "app-guide-radio": "радіо",
   "app-menu-country-select": "країна",
   "app-menu-interests": "інтереси",
