--- a/app/explore2/assets/i18n/conzept-ur.json
+++ b/app/explore2/assets/i18n/conzept-ur.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "شخصیت",
   "app-guide-featured-portal": "نمایاں پورٹل",
   "app-guide-musical-instrument": "آلہ",
+  "app-guide-technology": "technology",
   "app-guide-radio": "ریڈیو",
   "app-menu-country-select": "ملک",
   "app-menu-interests": "مفادات",
