--- a/app/explore2/assets/i18n/conzept-vi.json
+++ b/app/explore2/assets/i18n/conzept-vi.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "cá tính",
   "app-guide-featured-portal": "cổng thông tin nổi bật",
   "app-guide-musical-instrument": "dụng cụ",
+  "app-guide-technology": "technology",
   "app-guide-radio": "Đài",
   "app-menu-country-select": "quốc gia",
   "app-menu-interests": "sở thích",
