--- a/app/explore2/assets/i18n/conzept-zh.json
+++ b/app/explore2/assets/i18n/conzept-zh.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "角色",
   "app-guide-featured-portal": "特色门户",
   "app-guide-musical-instrument": "乐器",
+  "app-guide-technology": "technology",
   "app-guide-radio": "收音机",
   "app-menu-country-select": "国家",
   "app-menu-interests": "兴趣",
