--- a/app/explore2/assets/i18n/conzept-nl.json
+++ b/app/explore2/assets/i18n/conzept-nl.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "persona",
   "app-guide-featured-portal": "aanbevolen portaal",
   "app-guide-musical-instrument": "instrument",
+  "app-guide-technology": "technologie",
   "app-guide-radio": "radio",
   "app-menu-country-select": "land",
   "app-menu-interests": "interesses",
