--- a/app/explore2/assets/i18n/conzept-pt.json
+++ b/app/explore2/assets/i18n/conzept-pt.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "persona",
   "app-guide-featured-portal": "portal em destaque",
   "app-guide-musical-instrument": "instrumento",
+  "app-guide-technology": "technology",
   "app-guide-radio": "rádio",
   "app-menu-country-select": "país",
   "app-menu-interests": "interesses",
