--- a/app/explore2/assets/i18n/conzept-ru.json
+++ b/app/explore2/assets/i18n/conzept-ru.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "персона",
   "app-guide-featured-portal": "рекомендуемый портал",
   "app-guide-musical-instrument": "инструмент",
+  "app-guide-technology": "technology",
   "app-guide-radio": "радио",
   "app-menu-country-select": "страна",
   "app-menu-interests": "интересы",
