--- a/app/explore2/assets/i18n/conzept-sv.json
+++ b/app/explore2/assets/i18n/conzept-sv.json
@@ -193,6 +193,7 @@
   "app-menu-persona": "persona",
   "app-guide-featured-portal": "utvald portal",
   "app-guide-musical-instrument": "instrument",
+  "app-guide-technology": "technology",
   "app-guide-radio": "radio",
   "app-menu-country-select": "Land",
   "app-menu-interests": "intressen",
